kubernetes-manifests/basicjsdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicjs
  labels:
    app: basicjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basicjs
  template:
    metadata:
      labels:
        app: basicjs
    spec:
      containers:
        - name: basicjs
          image: europe-west1-docker.pkg.dev/gyucegok-alto/dock/basicjs
          ports:
          - name: http-server
            containerPort: 8080
