kubernetes-manifests/basicjssvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicjs
  labels:
    app: basicjs
spec:
  type: LoadBalancer
  selector:
    app: basicjs
  ports:
  - port: 80
    targetPort: http-server
