kubernetes-manifests/basicpysvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicpy
  labels:
    app: basicpy
spec:
  type: LoadBalancer
  selector:
    app: basicpy
  ports:
  - port: 80
    targetPort: http-server
