kubernetes-manifests/vs-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - basic.gyucegok.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-vs
spec:
  hosts:
  - basic.gyucegok.com
  - basicpy  
  gateways:
  - my-gateway
#  - mesh # applies to all the sidecars in the mesh
  http:
  -  route:
      - destination:
          host: basicpy
          port:
            number: 80
